# LitterBox-Web

./: .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .renovaterc.json5  Architecture.adoc  Containerfile  Readme.adoc  default.nix  docker-compose.yml  flake.lock.license  flake.nix  pom.xml
GUI_OUTPUT/: project.json
config/checkstyle/: checkstyle.xml
config/spotless/: spotless-format.xml  spotless.importorder.license
connectors/: .gitignore
connectors/api/: .envrc  README.md  default.nix  pyproject.toml  shell.nix
connectors/api/src/litterbox_web_api/: code_completion.py  code_readability.py
connectors/code_completion_dummy/: .envrc  README.md  container.nix  default.nix  poetry.lock.license  pyproject.toml  shell.nix
connectors/code_completion_dummy/src/code_completion_dummy/: main.py
connectors/code_readability/: .dockerignore  .envrc  Containerfile  README.md  pyproject.toml  shell.nix  uv.lock.license
connectors/code_readability/roberta/: config.json
connectors/code_readability/src/code_readability/: config.py  constant.py  decorator.py  dependencies.py  main.py  service.py
connectors/code_readability/src/code_readability/metric/: dorn.py
connectors/code_readability/src/code_readability/model/: model.py  towards_model.py
connectors/code_readability/src/code_readability/processing/: oalmbbp.py  scratch_colors.py  scratch_svg.py  scratch_towards.py  svg_util.py
connectors/code_readability/src/test/: test_main.py
connectors/code_readability/src/test/resources/: readable.json
connectors/code_readability/tests/: test_main.py
connectors/code_readability/tests/resources/: readable.json.license  unreadable.json
connectors/code_readability/tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
connectors/screenshot/: .envrc  .gitignore  .npmignore  .nvmrc  .prettierrc.license  Containerfile  README.md  container.nix  default.nix  eslint.config.mjs  package-lock.json  package.json  package.json.license  shell.nix
connectors/screenshot/src/: audio-context.js  index.js  util.js  worker.js
connectors/screenshot/src/lib/: blocks.js  define-dynamic-block.js
litterbox-web/: .gitlab-ci.yml  Architecture.adoc  Containerfile  Readme.adoc  default.nix  pom.xml
litterbox-web/config/checkstyle/: checkstyle.xml
litterbox-web/config/spotless/: spotless-format.xml
litterbox-web/scripts/: checkstyle_report.sh  coverage.sh  coverage_metrics.sh
litterbox-web/src/etc/: header.txt
litterbox-web/src/main/java/de/uni_passau/fim/se2/litterbox_web/: CorsConfig.java  LitterboxWebApplication.java
litterbox-web/src/main/resources/: application-code-readability.yml  application-local.yml  application-metrics.yml  application.properties  application.yml  banner.txt  banner.txt.license  sampleProject.json  sampleProject2.json
litterbox-web/src/test/java/de/uni_passau/fim/se2/litterbox_web/: LitterboxWebApplicationTest.java  LitterboxWebApplicationTests.java  LitterboxWebIntegrationTest.java  PlainLitterboxWebApplicationTest.java  SecurityConfigurationTest.java
litterbox-web/src/test/resources/: application-metrics.yml  application.yml
litterbox-web/src/test/resources/fixtures/: screenshotTest.svg.license  tokenizingTest.json
litterbox-web/src/test/resources/fixtures/scratch_programs/: boatRace.json.license
scripts/: checkstyle_report.sh  coverage.sh  coverage_metrics.sh
scripts/nix/: container.nix
src/etc/: header.txt
src/main/java/de/uni_passau/fim/se2/litterbox_web/: LitterboxWebApplication.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/code_completion/: CodeCompletionController.java  CodeCompletionModelConfig.java  CodeCompletionRequestDto.java  CodeCompletionService.java  package-info.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/code_readability/: CodeReadabilityConfig.java  CodeReadabilityController.java  CodeReadabilityRequestDto.java  CodeReadabilityService.java  package-info.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/configuration/: CorsConfigurationProperties.java  LitterBoxWebCorsConfiguration.java  MonitoringIpConfig.java  SecurityConfiguration.java  package-info.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/converter/: ConverterController.java  package-info.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/linter/: IssueGenerationException.java  IssueInfo.java  LinterController.java  LinterRequest.java  LinterService.java  package-info.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/llm/: LlmConfiguration.java  LlmController.java  LlmService.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/ml_preprocessing/: package-info.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/model/: ScratchProgramConverter.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/screenshot/: ScreenshotService.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/shared/: JsonScratchProgram.java  LitterBoxAnalysisService.java  Profiles.java  Scratch3ParserService.java  ScratchProgramConverter.java  TemporaryFileService.java  package-info.java
src/main/java/de/uni_passau/fim/se2/litterbox_web/tutorial_system/: ProgramAnalyzerService.java  TutorialIssueInfo.java  TutorialRequest.java  TutorialSystemController.java
src/main/resources/: application-code-completion.yml  application-code-readability.yml  application-local.yml  application-metrics.yml  application.yml  banner.txt  banner.txt.license
src/test/java/de/uni_passau/fim/se2/litterbox_web/: LitterboxWebApplicationTest.java  LitterboxWebIntegrationTest.java  SecurityConfigurationTest.java
src/test/java/de/uni_passau/fim/se2/litterbox_web/architecture/: ArchitectureTest.java  GeneralRulesTest.java  ImportsTest.java  LoggerTest.java  ModulithTest.java  SpringFeaturesTest.java  TestStructureTest.java
src/test/java/de/uni_passau/fim/se2/litterbox_web/code_completion/: CodeCompletionIntegrationTest.java
src/test/resources/: application-llm.yml  junit-platform.properties
src/test/resources/fixtures/: Readme.md
src/test/resources/fixtures/scratch_programs/: boatRace.json
(+114 files in other folders)
