# SPDX-FileCopyrightText: 2024 LitterBox-Web contributors
#
# SPDX-License-Identifier: EUPL-1.2

[project]
name = "litterbox-web-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Benedikt Fein", email = "fein@fim.uni-passau.de" }
]
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.0"
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]


[[tool.uv.index]]
name = "litterbox-web-gitlab"
url = "https://gitlab.infosun.fim.uni-passau.de/api/v4/projects/1140/packages/pypi/simple"
publish-url = "https://gitlab.infosun.fim.uni-passau.de/api/v4/projects/1140/packages/pypi"


[tool.isort]
profile = "black"


[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ['pydantic.mypy']


[tool.ruff]
line-length = 88
output-format = "full"
target-version = "py310"


[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

