# SPDX-FileCopyrightText: 2024 LitterBox-Web contributors
#
# SPDX-License-Identifier: EUPL-1.2

[project]
name = "code-completion-dummy"
version = "0.1.0"
description = "Dummy implementation for a code completion service"
authors = [
    { name = "Benedikt Fein", email = "fein@fim.uni-passau.de" }
]
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "litterbox-web-api>=0.1.0",
    "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "ruff>=0.8.0",
]

[project.scripts]
code-completion-dummy = "code_completion_dummy.main:main"

[[tool.uv.index]]
name = "litterbox-web-gitlab"
url = "https://gitlab.infosun.fim.uni-passau.de/api/v4/projects/1140/packages/pypi/simple"


[tool.isort]
profile = "black"


[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.ruff]
line-length = 88
output-format = "full"
target-version = "py312"


[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"
