# SPDX-FileCopyrightText: 2024 LitterBox-Web contributors
#
# SPDX-License-Identifier: EUPL-1.2

[project]
name = "code-completion-dummy"
version = "0.1.0"
description = "Dummy implementation for a code completion service"
authors = [
    { name = "Benedikt Fein", email = "fein@fim.uni-passau.de" }
]
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "litterbox-web-api>=0.1.0",
    "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
    "ruff>=0.8.0"
]

[[tool.uv.index]]
name = "litterbox-web-gitlab"
url = "https://gitlab.infosun.fim.uni-passau.de/api/v4/projects/1140/packages/pypi/simple"


[tool.ruff]
line-length = 88
target-version = "py312"


[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"
