# SPDX-FileCopyrightText: 2025 LitterBox-Web contributors
#
# SPDX-License-Identifier: EUPL-1.2

[project]
name = "code-readability"
version = "0.1.0"
description = "Code readability service"
authors = [
    { name = "Tien Duc Nguyen", email = "nguyen69@ads.uni-passau.de" }
]
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "litterbox-web-api>=0.1.0",
    "lxml>=5.3.0",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "pillow~=11.0.0",
    "pycairo>=1.27.0",
    "pydantic-settings>=2.8.1",
    "reportlab>=4.2.2",
    "rlPyCairo>=0.3.0",
    "svglib>=1.5.1",
    "svgpathtools>=1.6.1",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "transformers>=4.45.2",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
]

[project.scripts]
code-readability = "code_readability.main:main"


[tool.uv.sources]
litterbox-web-api = { index="litterbox-web-gitlab" }

[[tool.uv.index]]
name = "litterbox-web-gitlab"
url = "https://gitlab.infosun.fim.uni-passau.de/api/v4/projects/1140/packages/pypi/simple"


[tool.isort]
profile = "black"


[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.ruff]
line-length = 88
output-format = "full"
target-version = "py312"


[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.coverage.run]
branch = true
source = ["src/code_readability", "tests"]
omit = ["tests/resources/*"]


[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"
